# TARS

./: README.md  main.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/tarsiflow/: __init__.py  datatypes.py  field.py  model.py  tracking.py
tests/: conftest.py  test_datatypes.py  test_model.py
