[project]
name = "tarsiflow"
version = "0.2.0"
description = "Toolkit for building reactive, dependency-tracked computational graphs in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
